--- a/src/main/java/Grupo3A/presentacion/LoginForm.form
+++ b/src/main/java/Grupo3A/presentacion/LoginForm.form
@@ -29,7 +29,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="7e424" class="javax.swing.JLabel" binding="textPasswor">
+      <component id="7e424" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -53,7 +53,7 @@
           <text value="Salir"/>
         </properties>
       </component>
-      <component id="aba20" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+      <component id="aba20" class="javax.swing.JPasswordField" binding="txtpassword">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
